# AnimeEffects

./: .gitignore  CMakeLists.txt  README-zh.md  README.md
.github/workflows/: build-windows.yaml  build_linux.yaml  build_mac_arm.yaml  build_mac_intel.yaml
data/locale/: translation_es.qm  translation_es.ts  translation_ja.qm  translation_ja.ts  translation_ru.ts  translation_zh.qm  translation_zh.ts
data/themes/: LICENSE.txt
scripts/: AEWinInstaller.iss  link_manually.sh
src/: common.pri
src/cmnd/: CMakeLists.txt
src/core/: AbstractCursor.cpp  BoneInfluenceMap.cpp  BoneInfluenceMap.h  BoneShape.cpp  CMakeLists.txt  CameraInfo.cpp  CameraInfo.h  Deserializer.cpp  FFDKeyUpdater.cpp  FolderNode.cpp  FolderNode.h  GridMesh.cpp  GridMesh.h  LayerMesh.cpp  LayerMesh.h  LayerNode.cpp  LayerNode.h  ObjectNode.h  ObjectNodeUtil.cpp  ObjectNodeUtil.h  Renderer.h  ResourceHolder.cpp  ResourceUpdatingWorkspace.h  Serializer.cpp  TimeFormat.cpp  TimeFormat.h  TimeKeyBlender.cpp
src/ctrl/: CMakeLists.txt  Driver.cpp  ExportParams.h  ImageFileLoader.cpp  ImageFileLoader.h  Painter.cpp  System.cpp  TimeLineEditor.cpp  TimeLineEditor.h
src/gl/: CMakeLists.txt  PrimitiveDrawer.cpp  TextObject.cpp
src/gui/: AudioPlaybackWidget.cpp  CMakeLists.txt  DriverHolder.h  ExportDialog.cpp  GeneralSettingDialog.cpp  GeneralSettingDialog.h  LocaleDecider.cpp  MainDisplayWidget.cpp  MainMenuBar.cpp  MainViewSetting.h  MainWindow.cpp  MainWindow.h  ObjectTreeWidget.cpp  ObjectTreeWidget.h  PlayBackWidget.cpp  PropertyWidget.cpp  PropertyWidget.h  ResourceTreeWidget.cpp  TimeLineEditorWidget.cpp  TimeLineEditorWidget.h  TimeLineInfoWidget.cpp  TimeLineInfoWidget.h  (+3 more)
(+56 files in other folders)
